testsuite/tests/ffi/should_run/T14624_c.h

#include "Rts.h"

StgChar f_char(StgChar);
StgInt f_int(StgInt);
StgInt8 f_int8(StgInt8);
StgInt16 f_int16(StgInt16);
StgInt32 f_int32(StgInt32);
StgInt64 f_int64(StgInt64);
StgWord f_word(StgWord);
StgWord8 f_word8(StgWord8);
StgWord16 f_word16(StgWord16);
StgWord32 f_word32(StgWord32);
StgWord64 f_word64(StgWord64);
StgFloat f_float(StgFloat);
StgDouble f_double(StgDouble, StgDouble);
void* f_addr(void*);
void* f_stable_ptr(void*);